Movie collection backend
Implemented all the endpoint necessary for the Movie Collection. It consists of a paginated and filtered find all, an id based find one, create, update and delete.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/server.ts",
     "build": "tsc",
-    "run:compiled": "node dist/index.js"
+    "run:compiled": "node dist/server.ts"
   },
   "keywords": [],
   "author": "",
