TailwindCSS and Angular Materials
Installed both TailwindCSS and Angular Materials, also added configs files where necessary

--- a/frontend/moviesitory/angular.json
+++ b/frontend/moviesitory/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.scss"
             ],
             "scripts": [],
@@ -95,6 +96,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -102,5 +104,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "1265d382-a9ec-4ac4-9e17-6490d82d8d28"
   }
 }
