--- a/frontend/moviesitory/package.json
+++ b/frontend/moviesitory/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-server": "^18.2.13",
     "@angular/router": "^18.2.13",
     "@angular/ssr": "^18.2.14",
+    "@cloudinary/ng": "^2.1.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@tailwindcss/postcss": "^4.0.3",
     "express": "^4.18.2",
+    "flowbite": "^3.1.1",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.3",
