--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,11 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@types/express": "^5.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "mongoose": "^8.9.5"
   }
 }
